signUpPage.html and SignUp.css done

--- a/loginPage.html
+++ b/loginPage.html
@@ -25,12 +25,12 @@
             <button type="submit" class="login-btn">Login</button>
             <div class="links">
                 <a href="#">Forgot Password?</a>
-                <a href="#">Sign Up</a>
+                <a href="signUpPage.html">Sign Up</a>
             </div>
         </form>
     </div>
 </div>
 <!-- Font Awesome for icons -->
-<script src="https://kit.fontawesome.com/a076d05399.js"></script>
+<script src="JS/logingPage.js"></script>
 </body>
 </html>
