--- a/DashBoard.html
+++ b/DashBoard.html
@@ -18,7 +18,7 @@
             <li onclick="loadContent('vehicle')">🚜 Vehicle Management</li>
             <li onclick="loadContent('equipment')">🔧 Equipment Service</li>
         </ul>
-        <button class="logout-btn" onclick="logout()">🔓 Logout</button>
+        <a href="loginPage.html" class="logout-btn" onclick="logout()">🔓 Logout</a>
     </aside>
     <main class="content-area">
         <div id="content">Select an option from the sidebar to display information here.</div>
