--- a/loginPage.html
+++ b/loginPage.html
@@ -22,7 +22,7 @@
                 <span>Password</span>
                 <i class="icon fas fa-lock"></i>
             </div>
-            <button type="submit" class="login-btn">Login</button>
+            <a href="DashBoard.html" type="submit" class="login-btn">Login</a>
             <div class="links">
                 <a href="#">Forgot Password?</a>
                 <a href="signUpPage.html">Sign Up</a>
