field page crud operation done

--- a/HTML/DashBoard.html
+++ b/HTML/DashBoard.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="CSS/dashboard.css">
+    <link rel="stylesheet" href="../CSS/dashboard.css">
+    <link rel="stylesheet" href="../CSS/field.css">
 </head>
 <body>
 <div class="dashboard-container">
@@ -24,6 +25,7 @@
         <div id="content">Select an option from the sidebar to display information here.</div>
     </main>
 </div>
-<script src="JS/dashboard.js"></script>
+<script src="../JS/dashboard.js"></script>
+<script src="../JS/fieldCrud.js"></script>
 </body>
 </html>
