--- a/HTML/loginPage.html
+++ b/HTML/loginPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced Login Page</title>
-    <link rel="stylesheet" href="CSS/loginPage.css">
+    <link rel="stylesheet" href="../CSS/loginPage.css">
 </head>
 <body>
 <div class="container">
@@ -31,6 +31,6 @@
     </div>
 </div>
 <!-- Font Awesome for icons -->
-<script src="JS/logingPage.js"></script>
+<script src="../JS/logingPage.js"></script>
 </body>
 </html>
