--- a/HTML/signUpPage.html
+++ b/HTML/signUpPage.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Advanced Signup Page</title>
-  <link rel="stylesheet" href="CSS/SignUp.css">
+  <link rel="stylesheet" href="../CSS/SignUp.css">
 </head>
 <body>
 <div class="container">
@@ -42,7 +42,7 @@
 </div>
 <!-- Font Awesome for icons -->
 
-<script src="JS/SignUp.js"></script>
+<script src="../JS/SignUp.js"></script>
 </body>
 </html>
 </title>
