crop mnagement page done

--- a/HTML/DashBoard.html
+++ b/HTML/DashBoard.html
@@ -6,6 +6,7 @@
     <title>Dashboard</title>
     <link rel="stylesheet" href="../CSS/dashboard.css">
     <link rel="stylesheet" href="../CSS/field.css">
+    <link rel="stylesheet" href="../CSS/crop.css">
 </head>
 <body>
 <div class="dashboard-container">
