staff management page done

--- a/HTML/DashBoard.html
+++ b/HTML/DashBoard.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../CSS/dashboard.css">
     <link rel="stylesheet" href="../CSS/field.css">
     <link rel="stylesheet" href="../CSS/crop.css">
+    <link rel="stylesheet" href="../CSS/staff.css">
 </head>
 <body>
 <div class="dashboard-container">
