staff management page done

--- a/HTML/DashBoard.html
+++ b/HTML/DashBoard.html
@@ -12,8 +12,9 @@
 <body>
 <div class="dashboard-container">
     <aside class="sidebar">
-        <h2>Dashboard</h2>
+        <h1>Dashboard</h1>
         <ul>
+            <li>Dashboard</li>
             <li onclick="loadContent('field')">🌾 Field Management</li>
             <li onclick="loadContent('crops')">🌱 Crops Management</li>
             <li onclick="loadContent('staff')">👥 Staff Management</li>
