--- a/HTML/signUpPage.html
+++ b/HTML/signUpPage.html
@@ -35,7 +35,7 @@
       </div>
       <button type="submit" class="signup-btn">Sign Up</button>
       <div class="links">
-        <a href="login.html">Already have an account? Login</a>
+        <a href="loginPage.html">Already have an account? Login</a>
       </div>
     </form>
   </div>
