--- a/HTML/DashBoard.html
+++ b/HTML/DashBoard.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="../CSS/dashboard.css">
-    <link rel="stylesheet" href="../CSS/field.css">
-    <link rel="stylesheet" href="../CSS/crop.css">
-    <link rel="stylesheet" href="../CSS/staff.css">
+    <link rel="stylesheet" href="../css/dashboard.css">
+    <link rel="stylesheet" href="../css/field.css">
+    <link rel="stylesheet" href="../css/crop.css">
+    <link rel="stylesheet" href="../css/staff.css">
 </head>
 <body>
 <div class="dashboard-container">
