--- a/dashboard.html
+++ b/dashboard.html
@@ -6,6 +6,7 @@
   <title>Dashboard</title>
   <link rel="stylesheet" href="css/dashboard.css">
   <link rel="stylesheet" href="css/field.css">
+  <link rel="stylesheet" href="css/crop.css">
 </head>
 <body>
 <div class="sidebar">
