--- a/dashboard.html
+++ b/dashboard.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/dashboard.css">
   <link rel="stylesheet" href="css/field.css">
   <link rel="stylesheet" href="css/crop.css">
+  <link rel="stylesheet" href="css/staff.css">
 </head>
 <body>
 <div class="sidebar">
