added log service page

--- a/dashboard.html
+++ b/dashboard.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/field.css">
   <link rel="stylesheet" href="css/crop.css">
   <link rel="stylesheet" href="css/staff.css">
+  <link rel="stylesheet" href="css/log.css">
 </head>
 <body>
 <div class="sidebar">
