--- a/dashboard.html
+++ b/dashboard.html
@@ -267,5 +267,7 @@
 </section>
 <script src="js/lib/jquery-3.7.1.min.js"></script>
 <script src="controller/fieldController.js"></script>
+<script src="controller/cropController.js"></script>
+<script src="controller/staffController.js"></script>
 </body>
 </html>
