--- a/dashboard.html
+++ b/dashboard.html
@@ -265,6 +265,7 @@
     </table>
   </div>
 </section>
+<script src="js/dashboard.js"></script>
 <script src="js/lib/jquery-3.7.1.min.js"></script>
 <script src="controller/fieldController.js"></script>
 <script src="controller/cropController.js"></script>
