added another sections

--- a/dashboard.html
+++ b/dashboard.html
@@ -18,11 +18,11 @@
     <li><a href="#fieldSection">Field Management</a></li>
     <li><a href="#cropSection">Crops Management</a></li>
     <li><a href="#staffSection">Staff Management</a></li>
-    <li><a href="#" onclick="loadPage('logs')">Monitoring Log Service</a></li>
-    <li><a href="#" onclick="loadPage('vehicle')">Vehicle Management</a></li>
-    <li><a href="#" onclick="loadPage('equipment')">Equipment Service</a></li>
+    <li><a href="#logSection" >Monitoring Log Service</a></li>
+    <li><a href="#vehicleSection" >Vehicle Management</a></li>
+    <li><a href="#equipmentSection">Equipment Service</a></li>
   </ul>
-  <button class="logout-btn" onclick="logout()">Logout</button>
+  <button class="logout-btn" >Logout</button>
 </div>
 
 
@@ -265,6 +265,9 @@
     </table>
   </div>
 </section>
+<section id="logSection"></section>
+<section id="equipmentSection"></section>
+<section id="vehicleSection"></section>
 <script src="js/dashboard.js"></script>
 <script src="js/lib/jquery-3.7.1.min.js"></script>
 <script src="controller/fieldController.js"></script>
