added another sections

--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,7 @@
 <div class="sidebar">
   <h2>Dashboard</h2>
   <ul>
-    <li><a href="#">Home</a></li>
+    <li><a href="#homeSection">Home</a></li>
     <li><a href="#fieldSection">Field Management</a></li>
     <li><a href="#cropSection">Crops Management</a></li>
     <li><a href="#staffSection">Staff Management</a></li>
@@ -29,6 +29,7 @@
 <div class="main-content">
   <div id="content"></div>
 </div>
+<section id="homeSection"></section>
 
 <section id="fieldSection">
     <div class="main-container">
