--- a/dashboard.html
+++ b/dashboard.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/crop.css">
   <link rel="stylesheet" href="css/staff.css">
   <link rel="stylesheet" href="css/log.css">
+  <link rel="stylesheet" href="css/vehicle.css">
 
 </head>
 <body>
@@ -347,5 +348,7 @@
 <script src="controller/fieldController.js"></script>
 <script src="controller/cropController.js"></script>
 <script src="controller/staffController.js"></script>
+<script src="controller/logController.js"></script>
+<script src="controller/vehicle%20controller.js"></script>
 </body>
 </html>
