--- a/dashboard.html
+++ b/dashboard.html
@@ -39,6 +39,7 @@
 
     <!-- Field Form -->
     <form id="fieldForm" class="field-form">
+      <lable f></lable>
       <input type="text" id="fieldCode" placeholder="Field Code" required>
       <input type="text" id="fieldName" placeholder="Field Name" required>
       <input type="text" id="fieldLocation" placeholder="Field Location (Coordinate)" required>
