--- a/dashboard.html
+++ b/dashboard.html
@@ -308,7 +308,7 @@
         <input type="text" id="status" name="status" placeholder="Enter Status" required>
 
         <label for="selectStaff">Select Staff Member:</label>
-        <select id="selectStaff" name="selectStaff" required>
+        <select id="selectStaff" name="selectStaff" >
           <option value="">Select Staff</option>
           <!-- Staff options dynamically added here if needed -->
         </select>
